# qt-test

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui  qt-test.qrc  qt-test_zh_CN.ts  vcpkg.json
.github/workflows/: main.yml
cmake/: TargetArch.cmake
